# Video-Player

./: .Requirement.txt.kate-swp  Actions.qml  CMakeLists.txt  Content.qml  Content_BACKUP_17592.qml  Content_REMOTE_17592.qml  ControlBar.qml  Danmu.qml  DanmuRender.js  Dialogs.qml  Main.qml  Player.qml  Playlist.qml  README.md  Requirement.txt  capturemanager.cpp  capturemanager.h  danmu.cpp  danmu.h  danmumanager.cpp  danmumanager.h  danmutrack.cpp  danmutrack.h  downloadmanager.cpp  downloadmanager.h  dragdropmanager.cpp  dragdropmanager.h  font.cpp  font.h  main.cpp  mediaengine.cpp  mediaengine.h  package.sh  playlistmodel.cpp  playlistmodel.h  resources.qrc
assets/: video-player.desktop
log_report/: 05兰寅银朱灿银周俊6_18.txt  05兰寅银朱灿银周俊6_19.txt  05兰寅银朱灿银周俊6_20.txt  05兰寅银朱灿银周俊6_21.txt  05兰寅银朱灿银周俊6_22.txt  05兰寅银朱灿银周俊6_23.txt  05兰寅银朱灿银周俊6_24.txt  05兰寅银朱灿银周俊6_25.txt  05兰寅银朱灿银周俊6_26.txt
scripts/: video-player.sh
开发文档/: 开发文档.docx
日志报告/: 兰寅银朱灿银周俊6_17.txt  兰寅银朱灿银周俊6_18.txt
